--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>be.kdg.mavendemo</groupId>
-    <artifactId>test</artifactId>
+    <artifactId>ProjectTeamF</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
-    <name>test</name>
+    <name>ProjectTeamF</name>
     <url>http://maven.apache.org</url>
 	
     <dependencies>
@@ -14,6 +14,11 @@
             <artifactId>junit</artifactId>
             <version>4.10</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate</artifactId>
+            <version>3.2.6.ga</version>
         </dependency>
     </dependencies>
 
