--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,14 @@
     <artifactId>ProjectTeamF</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
+    <repositories>
+        <repository>
+            <id>java.net.m2</id>
+            <name>java.net m2 repo</name>
+            <url>http://download.java.net/maven/2/</url>
+        </repository></repositories>
     <name>ProjectTeamF</name>
     <url>http://maven.apache.org</url>
-
-
 
     <dependencies>
          <dependency>
