--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
             <id>java.net.m2</id>
             <name>java.net m2 repo</name>
             <url>http://download.java.net/maven/2/</url>
-        </repository></repositories>
+        </repository>
+    </repositories>
     <name>ProjectTeamF</name>
     <url>http://maven.apache.org</url>
 
