--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,18 @@
             <artifactId>hibernate</artifactId>
             <version>3.2.6.ga</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>ejb3-persistence</artifactId>
+            <version>1.0.1.GA</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.22</version>
+        </dependency>
+
     </dependencies>
 
     <build>
