--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,15 +4,19 @@
 	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
-	<display-name>Spring3-Hibernate</display-name>
+	<display-name>Project Team F</display-name>
 	<welcome-file-list>
-		<welcome-file>list.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>
 			org.springframework.web.servlet.DispatcherServlet
 		</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>./web/WEB-INF/spring-servlet.xml</param-value>
+        </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
@@ -20,3 +24,4 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 </web-app>
+
