--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 		</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>./web/WEB-INF/spring-servlet.xml</param-value>
+            <param-value>/webapp/WEB-INF/spring-servlet.xml</param-value>
         </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
