--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName= com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
-jdbc.databaseurl=jdbc:mysql://localhost:3306/TeamF
+jdbc.databaseurl=jdbc:mysql://localhost:3306/projectteamf
 jdbc.username=TeamF
 jdbc.password=teamf
