--- a/pom.xml
+++ b/pom.xml
@@ -16,17 +16,17 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-          <org.springframework.version>3.1.2.RELEASE</org.springframework.version>
+        <org.springframework.version>3.1.2.RELEASE</org.springframework.version>
     </properties>
 
     <dependencies>
         <dependency>
-           <groupId>javax</groupId>
-           <artifactId>javaee-api</artifactId>
-           <version>6.0</version>
-           <scope>provided</scope>
-         </dependency>
-         <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-jpa_2.0_spec</artifactId>
+            <version>1.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
@@ -93,44 +93,50 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
-      </dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.0.1.RELEASE</version>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <plugins>
-             <!-- Nodig om met versie 1.7 te kunnen compileren -->
-             <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-compiler-plugin</artifactId>
-                 <version>2.3.2</version>
-                 <configuration>
-                     <source>1.7</source>
-                     <target>1.7</target>
-                 </configuration>
-             </plugin>
+            <!-- Nodig om met versie 1.7 te kunnen compileren -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
                     <reportPlugins>
-					    <!-- Plugin om Javadoc te genereren -->
+                        <!-- Plugin om Javadoc te genereren -->
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-javadoc-plugin</artifactId>
                             <version>2.7</version>
                         </plugin>
-						<!-- Plugin om overzicht testen te genereren -->
+                        <!-- Plugin om overzicht testen te genereren -->
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-report-plugin</artifactId>
                             <version>2.6</version>
                         </plugin>
-						<!-- Plugin om code coverage rapport van de testen te genereren -->
+                        <!-- Plugin om code coverage rapport van de testen te genereren -->
                         <plugin>
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>cobertura-maven-plugin</artifactId>
                             <version>2.5.1</version>
-                         </plugin>
+                        </plugin>
                         <!-- Plugin om findbugs uit te voeren -->
                         <plugin>
                             <groupId>org.codehaus.mojo</groupId>
