--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,20 @@
                             <artifactId>findbugs-maven-plugin</artifactId>
                             <version>2.5.2</version>
                         </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>versions-maven-plugin</artifactId>
+                            <version>2.0</version>
+                            <reportSets>
+                                <reportSet>
+                                    <reports>
+                                        <report>dependency-updates-report</report>
+                                        <report>plugin-updates-report</report>
+                                        <report>property-updates-report</report>
+                                    </reports>
+                                </reportSet>
+                            </reportSets>
+                        </plugin>
                     </reportPlugins>
                 </configuration>
             </plugin>
