--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,16 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                    <testSource>1.7</testSource>
+                    <testTarget>1.7</testTarget>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.13</version>
+                <configuration>
+                <argLine>-XX:-UseSplitVerifier</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -219,6 +229,7 @@
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-report-plugin</artifactId>
                             <version>2.13</version>
+
                         </plugin>
                         <!-- Plugin om code coverage rapport van de testen te genereren -->
                         <plugin>
