--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,14 @@
             <artifactId>velocity-tools</artifactId>
             <version>2.0</version>
         </dependency>
+
+        <!-- Jackson JSON Mapper -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
