--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName= com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.databaseurl=jdbc:mysql://localhost:3306/projectteamf
-jdbc.username=TeamF
-jdbc.password=teamf
+jdbc.username=GroepF
+jdbc.password=groepf
 
 
