--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,19 @@
     </properties>
 
     <dependencies>
+        <!-- Apache Commons Upload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.2.2</version>
+        </dependency>
 
+        <!-- Apache Commons Upload -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
         <!-- Spring 3 dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
