--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,14 @@
 
     <dependencies>
 
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>3.1.3.RELEASE</version>
+        </dependency>
         <!-- Apache Commons Upload -->
+
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
