--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
             <name>java.net m2 repo</name>
             <url>http://download.java.net/maven/2/</url>
         </repository>
+        <repository>
+            <id>spring-milestone</id>
+            <name>Spring Maven Milestone Repository</name>
+            <url>http://maven.springframework.org/milestone</url>
+        </repository>
     </repositories>
     <name>ProjectTeamF</name>
     <url>http://maven.apache.org</url>
@@ -22,6 +27,17 @@
     <dependencies>
 
 
+        <dependency>
+            <groupId>org.cloudfoundry</groupId>
+            <artifactId>cloudfoundry-runtime</artifactId>
+            <version>0.7.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-amqp</artifactId>
+            <version>1.1.3.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
