--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,12 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test-mvc</artifactId>
+            <version>1.0.0.M1</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.cloudfoundry</groupId>
@@ -221,6 +226,7 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.7.1</version>
         </dependency>
+
 
     </dependencies>
 
