username+paswoord databank

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
 jdbc.driverClassName= com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.databaseurl=jdbc:mysql://localhost:3306/projectteamf
-jdbc.username=GroepF
-jdbc.password=groepf
+jdbc.username=groepF
+jdbc.password=groepF
 
 
 
