--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,7 @@
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
 		<url-pattern>*.html</url-pattern>
+        <url-pattern>*.json</url-pattern>
 	</servlet-mapping>
 
     <context-param>
