--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
             <name>Spring Maven Milestone Repository</name>
             <url>http://maven.springframework.org/milestone</url>
         </repository>
+        <repository>
+            <id>gcm-server-repository</id>
+            <url>https://github.com/slorber/gcm-server-repository/raw/master/releases/</url>
+        </repository>
     </repositories>
     <name>ProjectTeamF</name>
     <url>http://maven.apache.org</url>
@@ -26,6 +30,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.google.android.gcm</groupId>
+            <artifactId>gcm-server</artifactId>
+            <version>1.0.2</version>
+        </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
